[package]
name = "excel2sql"
version = "0.1.0"
authors = ["heweitao <675428202@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.16.1"
mysql = "17.0.0"
clap = "2.33.0"
log = "0.4.8"
structopt = "0.3.5"
